--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,22 @@
-/* Add CSS Styling */
+
+.odd, .n3{
+    background-color: rgb(250, 138, 155);
+    font-family:Verdana, DejaVu Sans, sans-serif;
+    font-weight:500
+
+}
+
+#n2{
+    color: blue;
+    font-size: 36px;
+}
+
+.n3{
+    font-size: 24px;
+}
+
+#n4{
+    font-size: 24px;
+    background-color: rgb(143, 235, 143);
+    font-weight: bold;
+}
