--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,14 +12,21 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 0;
+  align-items: center;
+  padding: 8px
 }
 
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
-  width: 48px;
-  height: 48px;
+  width: 24px;
+  height: 24px;
+  flex-basis: auto;
+  flex-shrink: 0;
 }
 
 .logo {
@@ -27,6 +34,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  justify-self: flex-start;
 }
 
 button {
@@ -34,15 +42,34 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 24px;
+  padding: 4px 12px;
 }
+
+.left_side{
+  display: flex;
+  gap: 16px;
+}
+
+.right_side{
+  display: flex;
+  gap: 16px;
+  flex-wrap: nowrap;
+}
+
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin: 8px;
+  flex: 0 1 100%;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0px;
+  padding: 8px;
+  align-items: center;
+  
 }
