--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -5,6 +5,7 @@ body {
 img {
   width: 100px;
   height: 100px;
+  margin: 0;
 }
 
 .title {
@@ -23,4 +24,26 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.header{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.content{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+
+}
+
+.item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+  max-width: 200px;
 }
